--- a/Random_Word_Generator/apps/rwgapp/static/rwgapp/css/style.css
+++ b/Random_Word_Generator/apps/rwgapp/static/rwgapp/css/style.css
@@ -1,7 +1,7 @@
 .container {
   margin: 0px auto;
   text-align: center;
-    vertical-align: middle;
+  vertical-align: middle;
 }
 
 .container h1{
@@ -20,6 +20,6 @@
   font-size: 18px;
 }
 
-#generatebtn{
-  background:
+form{
+  margin-bottom: 20px;
 }
