handle blanks better

--- a/SurveyForm/apps/surveyform/templates/surveyform/index.html
+++ b/SurveyForm/apps/surveyform/templates/surveyform/index.html
@@ -10,7 +10,11 @@
   </head>
   <body>
     <div class="container">
+    
       <form action="surveys/process" method="POST">
+        {% if error %}
+          <p style="background-color:red; color:white;width:300px;text-align:center">{{error}}</p>
+        {% endif%}
         {% csrf_token %}
           <div class="form-group row">
             <label for="name" class="col-sm-2 col-form-label">Your Name: </label>
