--- a/Amadon/apps/amadonapp/templates/amadonapp/index.html
+++ b/Amadon/apps/amadonapp/templates/amadonapp/index.html
@@ -20,21 +20,26 @@
           </tr>
         </thead>
         <tbody>
+          {% for product in items %}
           <tr>
-            <td class="item">Dojo Tshirt</td>
-            <td class="price">$19.99</td>
+            <td class="item">{{ product.itemName }}</td>
+            <td class="price">{{product.price}}</td>
             <td class="actions">
-              <form action="/amadon/buy" method="POST">
+              <form action="/amadon/buy/{{product.id}}"  method="POST">
                 {% csrf_token %}
-                <select name="quantity" id="">
+                <select name="quantity">
+                  <option selected disabled>--</option>
                   <option value="1">1</option>
                   <option value="2">2</option>
                 </select>
-                <input type="hidden" name="product_id" value="1015">
+                <input type="hidden" >
                 <input type="submit" class="btn btn-success" value="Buy!">
               </form>
             </td>
+
           </tr>
+
+          {% endfor %}
         </tbody>
       </table>
 
