--- a/user_dashboard/apps/log_reg/static/log_reg/css/log_reg.css
+++ b/user_dashboard/apps/log_reg/static/log_reg/css/log_reg.css
@@ -8,4 +8,10 @@ input.form-control.registration_page{
 
 button.btn.btn-success.registration_page{
   margin-left: 525px;
+
+}
+
+div.alert.alert-danger{
+  text-align: left;
+  width: 700px;
 }
