--- a/user_dashboard/apps/log_reg/templates/log_reg/base.html
+++ b/user_dashboard/apps/log_reg/templates/log_reg/base.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Courses</title>
+    <title>User Dashboard</title>
     {% load static %}
     <link rel="stylesheet" href="{%static 'log_reg/css/log_reg.css'%}">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
