--- a/user_dashboard/apps/log_reg/templates/log_reg/index.html
+++ b/user_dashboard/apps/log_reg/templates/log_reg/index.html
@@ -4,7 +4,7 @@
       <div class="jumbotron">
         <h1 class="display-3">Welcome to the User Dashboard</h1>
         <p>Killing two birds with one stone, Login and Registration along with the User Dashboard assignment</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Start &raquo;</a></p>
+        <p><a class="btn btn-primary btn-lg" href="/login" role="button">Start &raquo;</a></p>
       </div>
 
         <!-- Example row of columns -->
