--- a/user_dashboard/apps/log_reg/templates/log_reg/registration.html
+++ b/user_dashboard/apps/log_reg/templates/log_reg/registration.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 {% extends 'log_reg/base.html'%}
   {% block body_block %}
+
+  <h3>Register</h3>
+
+  {% if messages %}
+  <div class="alert alert-danger">
+    <ul>
+    {% for message in messages %}
+      <li style="list-style:none;">{{message}}</li>
+    {% endfor%}
+    </ul>
+  </div>
+  {% endif %}
   <form action="register/submit" method="POST">
     {% csrf_token %}
     <div class="form-group">
