--- a/user_dashboard/apps/log_reg/templates/log_reg/registrationsuccess.html
+++ b/user_dashboard/apps/log_reg/templates/log_reg/registrationsuccess.html
@@ -2,17 +2,17 @@
 {% extends 'log_reg/base.html'%}
   {% block body_block %}
   <div class="row">
+    <h3>You have {{What}} successfully!</h3>
     <div class="form-group">
-      <label>Email address: </label>
+      <label>Email address: {{email}} </label>
 
     </div>
     <div class="form-group">
-      <label>First Name: </label>
+      <label>First Name: {{first_name}}</label>
     </div>
     <div class="form-group">
-      <label>Last Name: </label>
+      <label>Last Name: {{last_name}} </label>
     </div>
-
   </div>
 
 
