--- a/user_dashboard_full/apps/log_reg/templates/log_reg/index.html
+++ b/user_dashboard_full/apps/log_reg/templates/log_reg/index.html
@@ -4,7 +4,7 @@
       <div class="jumbotron">
         <h2 class="display-3">Welcome to the Full User Dashboard</h2>
         <p>Reusing "Login and Registration" code for this one!!!</p>
-        <p><a class="btn btn-primary btn-lg" href="/login" role="button">Start &raquo;</a></p>
+        <p><a class="btn btn-primary btn-lg" href="/login" role="button">Login Now &raquo;</a></p>
       </div>
 
         <!-- Example row of columns -->
