--- a/user_dashboard_full/apps/adminapp/templates/adminapp/dashboard.html
+++ b/user_dashboard_full/apps/adminapp/templates/adminapp/dashboard.html
@@ -25,7 +25,7 @@
       {% for user in users %}
       <tr>
         <td>{{user.id}}</td>
-        <td>{{user.first_name}} {{user.last_name}}</td>
+      <td>  <a href="/users/show/{{user.id}}">{{user.first_name}} {{user.last_name}}</a></td>
         <td>{{user.email_address}}</td>
         <td>{{user.created_at}}</td>
         {% if user.user_role == 9%}
@@ -36,16 +36,13 @@
 
         {% if role == 9 %}
         <td>
-          <a style="margin-right:10px;" href="">edit</a>
-          <a href="">remove</a>
+          <a style="margin-right:10px;" href="/users/edit/{{user.id}}">edit</a>
+          <a href="/users/delete/{{user.id}}">remove</a>
         </td>
         {% endif %}
-
       </tr>
       {% endfor %}
     </tbody>
-
   </table>
-
 
   {% endblock %}
