--- a/user_dashboard_full/apps/adminapp/templates/adminapp/registration.html
+++ b/user_dashboard_full/apps/adminapp/templates/adminapp/registration.html
@@ -3,7 +3,7 @@
   {% block body_block %}
 
   <h3>Add a new user</h3>
-  <a href="/dashboard/admin"><button class="btn btn-primary" style="margin-left:1000px;margin-bottom:30px;">Return to Dashboard</button></a>
+  <a href="/dashboard/admin"><button class="btn btn-primary" style="margin-left:440px;margin-bottom:30px;">Return to Dashboard</button></a>
 
   {% if messages %}
   <div class="alert alert-danger">
@@ -14,7 +14,7 @@
     </ul>
   </div>
   {% endif %}
-  <form action="register/submit" method="POST">
+  <form action="/users/submit" method="POST">
     {% csrf_token %}
     <div class="form-group">
       <label>Email address: </label>
@@ -47,7 +47,5 @@
     <button type="submit" class="btn btn-success registration_page">Register</button>
 
   </form>
-
-  <a href="/">Already have an account? Login</a>
 
   {% endblock %}
